--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -49,6 +49,7 @@
   "downloadPlaylist": "Download playlist",
   "dynamicColor": "Dynamic accent color (Android 12+)",
   "error": "An error occurred. Check logs or try again.",
+  "errorCheckingForUpdates": "An error occurred while checking for updates. Please check your internet connection or try again later.",
   "folderRestrictions": "Android restrictions require selecting specific folders (e.g., Documents or Downloads) for backup.",
   "home": "Home",
   "hours": "Hours",
@@ -128,5 +129,22 @@
   "undo": "Undo",
   "update": "Update",
   "userPlaylists": "User playlists",
-  "youtubePlaylistLinkOrId": "YouTube playlist link or ID"
+  "youtubePlaylistLinkOrId": "YouTube playlist link or ID",
+  "localUpdateAvailable": "Local update available. Install from downloaded file.",
+  "localUpdateReady": "Local APK found. Click Install to update.",
+  "permissionDenied": "Permission denied.",
+  "storagePermissionNeeded": "Storage permission is required to download and install updates.",
+  "startingDownload": "Starting download...",
+  "downloading": "Downloading",
+  "downloadCompleteInstall": "Download complete. Click Install to update.",
+  "downloadFailedRetry": "Download failed. Please try again.",
+  "downloadFailed": "Download failed!",
+  "openingInstaller": "Opening installer...",
+  "failedToOpenInstaller": "Failed to open installer. Please try again.",
+  "installationFailed": "Installation failed!",
+  "apkFileNotFound": "APK file not found.",
+  "updateAvailable": "Update Available",
+  "newVersionAvailable": "A new version",
+  "updateNotes": "Update Notes",
+  "couldNotLaunchUrl": "Could not launch update URL."
 }
